--- a/src/views/blog.ejs
+++ b/src/views/blog.ejs
@@ -9,38 +9,12 @@
     />
   </head>
   <body>
-    <div id="editor"></div>
+    <div style="width: 50%; margin: auto">
+      <div id="editor"></div>
+      <button id="save-button">Post</button>
+    </div>
     <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
-    <script>
-      const Editor = toastui.Editor;
-      const editor = new Editor({
-        el: document.querySelector("#editor"),
-        height: "500px",
-        initialEditType: "markdown",
-        previewStyle: "vertical",
-      });
-
-      // Save content to the backend
-      function saveContent() {
-        const content = editor.getMarkdown();
-        fetch("/save", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify({ content }),
-        })
-          .then((response) => response.json())
-          .then((data) => {
-            console.log(data);
-          });
-      }
-
-      // Add an event listener for saving content
-      document
-        .querySelector("#save-button")
-        .addEventListener("click", saveContent);
-    </script>
-    <button id="save-button">Save</button>
+    <script type="text/javascript" src="/js/blog.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </body>
 </html>
